@@ -74,7 +74,7 @@ void IntervalManager::read()
         if( !e.isNull() && e.tagName()== "site")
         {
             QString url=e.attribute("url");
-            if (url!=QString::null)
+            if (url.isNull())
                 m_siteMap[url]=e.attribute("lastFetched","0").toUInt();
         }
         n = n.nextSibling();
